# streaminfer

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
streaminfer/: __init__.py  batcher.py
